Made fixed width on mobile
Made fixed width on mobile

--- a/public/wc_style_01.css
+++ b/public/wc_style_01.css
@@ -7,14 +7,32 @@ body {
     font-family: "source-sans-pro", sans-serif;
     font-style: normal;
     font-weight: 200;
-    width: 1000px;
 }
 
 #container {
     height: inherit;
 }
 
+.containerlarge {
+    width: 100%;
+}
+
+.containersmall {
+    width: 1000px;
+}
+
 #maintopbar {
+    position: fixed;
+    width: inherit;
+    height: 55px;
+    margin: 0px 0px 0px 0px;
+    background-color: #003034;
+    z-index: 1;
+    color: white;
+    box-shadow: 0px 0px 10px 0px #000000;
+}
+
+#maintopbarsmall {
     position: fixed;
     width: 1000px;
     height: 55px;
@@ -39,11 +57,13 @@ body {
 #maintopbar ul {
     list-style: none;
     margin: 0px;
+    padding: 0px;
+    height: 55px;
 }
 
 #maintopbar li {
-    padding: 2px 40px 0px 40px;
-    height: auto;
+    padding: 0px 40px 0px 40px;
+    height: 100%;
     margin: 0px;
     vertical-align: middle;
     float: right;
